UHF-2697: Fix ul padding to block it from flowing out of container

--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -87,5 +87,6 @@ p {
 
 ul, ol {
   margin: $spacing-and-half 0 0;
-  padding: $spacing-and-half 0 0;
+  padding-left: $spacing-double;
+  padding-top: $spacing-and-half;
 }
